Archive/94fdd75076b24b1a6b201c642b5faca3-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:1:1: error: 'depthenabled' does not name a type
 depthenabled = true;
 ^
main.cpp:2:1: error: 'depthwritemask' does not name a type
 depthwritemask = DepthWriteMask::All;
 ^
main.cpp:3:1: error: 'depthfunc' does not name a type
 depthfunc = Comparison::Less;
 ^
main.cpp:5:1: error: 'stencilenabled' does not name a type
 stencilenabled = false;
 ^
main.cpp:6:1: error: 'stencilreference' does not name a type
 stencilreference = 0;
 ^
main.cpp:7:1: error: 'stencilreadmask' does not name a type
 stencilreadmask = 0xFF;
 ^
main.cpp:8:1: error: 'stencilwritemask' does not name a type
 stencilwritemask = 0xFF;
 ^
main.cpp:11:1: error: 'frontstencilfail' does not name a type
 frontstencilfail = StencilOperations::Keep;
 ^
main.cpp:12:1: error: 'frontstencilpassdepthfail' does not name a type
 frontstencilpassdepthfail = StencilOperations::Keep;
 ^
main.cpp:13:1: error: 'frontstencilpassdepthpass' does not name a type
 frontstencilpassdepthpass = StencilOperations::Keep;
 ^
main.cpp:14:1: error: 'frontstencilfunc' does not name a type
 frontstencilfunc = Comparison::Always;
 ^
main.cpp:17:1: error: 'backstencilfail' does not name a type
 backstencilfail = StencilOperations::Keep;
 ^
main.cpp:18:1: error: 'backstencilpassdepthfail' does not name a type
 backstencilpassdepthfail = StencilOperations::Keep;
 ^
main.cpp:19:1: error: 'backstencilpassdepthpass' does not name a type
 backstencilpassdepthpass = StencilOperations::Keep;
 ^
main.cpp:20:1: error: 'backstencilfunc' does not name a type
 backstencilfunc = Comparison::Always;
 ^
